[package]
name = "xplm-reload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dlopen = "0.1.8"
dlopen_derive = "0.1.4"
notify = "6.1.1"
thiserror = "1.0.48"
xplm = "0.3.1"
xplm-sys = "0.4.0"

[lib]
crate-type = ["cdylib"]


